# fastapi_plotly

./: .gitignore  README.md  dev_run.py  main.py  pyproject.toml
app/api/: pages.py
app/api/v1/: __init__.py  plot.py
app/core/: asgi.py  create_app.py  misc.py  settings.py
app/graphics/: plot.py
site/: index.html
